--- a/trac/locale/ja/LC_MESSAGES/messages.po
+++ b/trac/locale/ja/LC_MESSAGES/messages.po
@@ -5106,9 +5106,7 @@ msgstr "チェンジセット"
 msgid ""
 "The file or directory '%(path)s' doesn't exist at revision %(rev)s or at "
 "any previous revision."
-msgstr ""
-"ファイルまたはディレクトリ '%(path)s' はリビジョン %(rev)s あるいは\"\n"
-"\"それ以前のリビジョンにおいて存在しません。"
+msgstr "ファイルまたはディレクトリ '%(path)s' は、リビジョン %(rev)s やそれ以前のリビジョン上に存在しません。"
 
 #: trac/versioncontrol/web_ui/log.py:202
 msgid "Nonexistent path"
