--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Trac 1.0.3 (TBD)
+Trac 1.0.3 (January 13, 2015)
 http://svn.edgewall.org/repos/trac/tags/trac-1.0.3
 
 Trac 1.0.3 is a maintenance release containing numerous fixes and minor
